--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,11 @@
         "src": "/(.*)",
         "dest": "src/index.ts"
       }
+    ],
+    "rewirites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
     ]
   }
