edit type rewrites in vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         "dest": "src/index.ts"
       }
     ],
-    "rewirites": [
+    "rewrites": [
       {
         "source": "/(.*)",
         "destination": "/"
