--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/"
+        "destination": "/index.html"
       }
     ]
   }
