--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     ],
     "rewrites": [
       {
-        "src": "/(.*)",
-        "dest": "src/index.ts"
+        "source": "/(.*)",
+        "destination": "src/index.ts"
       }
     ]
   }
