--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,5 @@
       "config": { "includeFiles": ["dist/**"] }
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/dist/index.html"  
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
