--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,5 @@
       "config": { "includeFiles": ["dist/**"] }
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "src/" }]
 }
