--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,13 @@
   "builds": [
     {
       "src": "src/index.ts",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "use": "@vercel/node"
     }
   ],
   "rewrites": [
     {
       "source": "/(.*)", 
-      "destination": "/src/index.ts" 
+      "destination": "/src/index.ts"
     }
   ],
   "routes": [
