--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,12 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)", 
-      "destination": "/src/index.ts"
-    }
-  ],
-  "routes": [
+      "source": "/api/(.*)", 
+      "destination": "/src/index.ts" 
+    },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)", 
+      "destination": "/index.html"
     }
   ]
 }
