--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,17 @@
   "builds": [
     {
       "src": "src/index.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)", 
-      "destination": "/src/index.ts" 
+      "source": "/api/(.*)",
+      "destination": "/src/index.ts"
     },
     {
-      "source": "/(.*)", 
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
