--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
+      "source": "/api/v1/(.*)",
       "destination": "/src/index.ts"
     }
   ]
