--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
+    "@types/nodemailer": "^6.4.16",
     "@types/swagger-ui-express": "^4.1.6",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "prisma": "^5.19.1",
     "swagger-autogen": "^2.23.7",
